--- a/sf-express.ipynb
+++ b/sf-express.ipynb
@@ -2,15 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "335cd590-43b9-4b73-9c65-8e18a3f6fcbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pdfplumber\n",
+    "import os\n",
     "import re\n",
     "from typing import List, Optional\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import pdfplumber\n",
     "import pyperclip\n",
+    "\n",
+    "def find_latest_file(folder_path: str) -> Path | None:\n",
+    "    \"\"\"\n",
+    "    Finds the path of the latest modified PDF file in a given folder.\n",
+    "\n",
+    "    Args:\n",
+    "        folder_path (str): The path to the folder to search.\n",
+    "\n",
+    "    Returns:\n",
+    "        Path: The Path object of the latest PDF file, or None if the folder\n",
+    "              is empty or no PDFs are found.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Get a generator of all files in the directory that are PDFs\n",
+    "        files = (p for p in Path(folder_path).iterdir() \n",
+    "                 if p.is_file() and p.suffix.lower() == '.pdf' and not p.name.lower().startswith('cds'))\n",
+    "        \n",
+    "        # Use the max() function to find the file with the latest modification time\n",
+    "        latest_file = max(files, key=os.path.getmtime)\n",
+    "        return latest_file\n",
+    "    \n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: The folder '{folder_path}' was not found.\")\n",
+    "        return None\n",
+    "    except ValueError:\n",
+    "        print(f\"Error: No PDF files found in the folder '{folder_path}'.\")\n",
+    "        return None\n",
     "\n",
     "def extract_invoice_data(pdf_path):\n",
     "    \"\"\"\n",
@@ -114,27 +144,36 @@
     "            return float(digits_only)\n",
     "    except (ValueError, TypeError):\n",
     "        # Return None if the conversion raises an error\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5ddbb63f-4402-4556-8f4f-f25c258d2e29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Replace 'SI 25818067 - Customer Invoice Aldi UK.pdf' with your file path\n",
-    "invoice_data = extract_invoice_data('SI 25818067 - Customer Invoice Aldi UK.pdf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "0f362c84-0b21-4694-bc1a-6392f01fccb7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return None\n",
+    "\n",
+    "\n",
+    "def find_latest_mrn_file(folder_path: str) -> Path | None:\n",
+    "    \"\"\"\n",
+    "    Finds the path of the latest modified PDF file in a given folder.\n",
+    "\n",
+    "    Args:\n",
+    "        folder_path (str): The path to the folder to search.\n",
+    "\n",
+    "    Returns:\n",
+    "        Path: The Path object of the latest PDF file, or None if the folder\n",
+    "              is empty or no PDFs are found.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Get a generator of all files in the directory that are PDFs\n",
+    "        files = (p for p in Path(folder_path).iterdir() \n",
+    "                 if p.is_file() and p.suffix.lower() == '.pdf' and  p.name.lower().startswith('cds'))\n",
+    "        \n",
+    "        # Use the max() function to find the file with the latest modification time\n",
+    "        latest_file = max(files, key=os.path.getmtime)\n",
+    "        return latest_file\n",
+    "    \n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: The folder '{folder_path}' was not found.\")\n",
+    "        return None\n",
+    "    except ValueError:\n",
+    "        print(f\"Error: No PDF files found in the folder '{folder_path}'.\")\n",
+    "        return None\n",
+    "\n",
     "def format_string_with_spaces(s: str) -> str:\n",
     "    # Remove all spaces from the original string\n",
     "    s_no_spaces = s.replace(\" \", \"\")\n",
@@ -179,18 +218,6 @@
     "        print(f\"An error occurred: {e}\")\n",
     "        return None\n",
     "\n",
-    "# Replace 'CDS-Import-31176317-20250828-1440.pdf' with your file path\n",
-    "pdf_file = 'CDS-Import-31176317-20250828-1440.pdf'\n",
-    "mrn_number = extract_mrn_from_pdf(pdf_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "fc4350e7-93df-4581-a231-55a82981e974",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def generate_and_copy_email_message(order_number: str, mrn_number: str):\n",
     "    \"\"\"\n",
     "    Generates a standardized email message, copies it to the clipboard,\n",
@@ -214,14 +241,24 @@
     "    except pyperclip.PyperclipException:\n",
     "        print(\"Could not copy to clipboard. Please check your pyperclip installation.\")\n",
     "\n",
-    "    return message\n",
-    "\n"
+    "    return message"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0ed0079-41ba-4cc3-91a3-775fd2ff3b13",
+   "metadata": {},
+   "source": [
+    "## Explanation\n",
+    "\n",
+    "- Below we first extract the invoice information to compare with custom template\n",
+    "- Then we generate the reply email based on the info in pdf file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8a719e82-ab57-4dd5-8b92-a51c935a333a",
+   "execution_count": 26,
+   "id": "b218665e-1e56-4704-b987-4543cd248745",
    "metadata": {},
    "outputs": [
     {
@@ -235,18 +272,23 @@
        " 'Total Invoice': 12249.6}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "folder_path = r\"/Users/zhengzhu/code/sf-express/Data/\"\n",
+    "# we extract the latest pdf file from the folder_path which not start with CDS\n",
+    "f = find_latest_file(folder_path)\n",
+    "# We extract the invoice information from the latest pdf file\n",
+    "invoice_data = extract_invoice_data('SI 25818067 - Customer Invoice Aldi UK.pdf')\n",
     "invoice_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "985e647f-2e21-45aa-b49a-0ea9cf9785d0",
    "metadata": {},
    "outputs": [
@@ -270,6 +312,10 @@
     }
    ],
    "source": [
+    "# We extract the latest mrn code from custom\n",
+    "pdf_file = find_latest_mrn_file(folder_path)\n",
+    "mrn_number = extract_mrn_from_pdf(pdf_file)\n",
+    "# We generate the message to reply the email\n",
     "msg = generate_and_copy_email_message(invoice_data['Order Number'].replace('WEPA',''), mrn_number)\n",
     "print(msg)"
    ]
