--- a/sf-express.ipynb
+++ b/sf-express.ipynb
@@ -319,6 +319,30 @@
     "msg = generate_and_copy_email_message(invoice_data['Order Number'].replace('WEPA',''), mrn_number)\n",
     "print(msg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c63817ea-5c75-49d2-ae46-110671208202",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/zhengzhu/code\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "319e0183-834d-4287-8a9b-d6d0222af8ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
