extract order number

--- a/sf-express.ipynb
+++ b/sf-express.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "335cd590-43b9-4b73-9c65-8e18a3f6fcbc",
    "metadata": {},
    "outputs": [],
@@ -218,6 +218,26 @@
     "        print(f\"An error occurred: {e}\")\n",
     "        return None\n",
     "\n",
+    "def extract_first_number(text: str) -> Optional[str]:\n",
+    "    \"\"\"\n",
+    "    Extracts the first continuous sequence of digits from a string.\n",
+    "\n",
+    "    Args:\n",
+    "        text: The string to search.\n",
+    "\n",
+    "    Returns:\n",
+    "        The first sequence of digits as a string, or None if no digits are found.\n",
+    "    \"\"\"\n",
+    "    # The pattern r'\\d+' matches one or more consecutive digits.\n",
+    "    # The pattern r'\\s*\\d+' would match a number preceded by optional spaces.\n",
+    "    match = re.search(r'\\d+', text)\n",
+    "    \n",
+    "    if match:\n",
+    "        # match.group(0) returns the entire substring that matched the pattern\n",
+    "        return match.group(0)\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
     "def generate_and_copy_email_message(order_number: str, mrn_number: str):\n",
     "    \"\"\"\n",
     "    Generates a standardized email message, copies it to the clipboard,\n",
@@ -257,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "b218665e-1e56-4704-b987-4543cd248745",
    "metadata": {},
    "outputs": [
@@ -272,7 +292,7 @@
        " 'Total Invoice': 12249.6}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "985e647f-2e21-45aa-b49a-0ea9cf9785d0",
    "metadata": {},
    "outputs": [
@@ -312,29 +332,35 @@
     }
    ],
    "source": [
+    "# We wait for the CDS file ready and copy to the folder path\n",
     "# We extract the latest mrn code from custom\n",
     "pdf_file = find_latest_mrn_file(folder_path)\n",
     "mrn_number = extract_mrn_from_pdf(pdf_file)\n",
     "# We generate the message to reply the email\n",
-    "msg = generate_and_copy_email_message(invoice_data['Order Number'].replace('WEPA',''), mrn_number)\n",
+    "msg = generate_and_copy_email_message(extract_first_number(invoice_data['Order Number']), mrn_number)\n",
     "print(msg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "id": "c63817ea-5c75-49d2-ae46-110671208202",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/zhengzhu/code\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'25603449'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "extract_first_number(\"SX - 25603449 / OX - 22385458\")"
+   ]
   },
   {
    "cell_type": "code",
