--- a/sf-express.ipynb
+++ b/sf-express.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 91,
    "id": "335cd590-43b9-4b73-9c65-8e18a3f6fcbc",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,47 @@
     "\n",
     "import pdfplumber\n",
     "import pyperclip\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "def find_sold_to_index_next(lines: List[str], search_string: str) -> Optional[int]:\n",
+    "    # A generator expression that yields the index for each matching line\n",
+    "    match_indices = (index for index, line in enumerate(lines) if line.strip().startswith(search_string))\n",
+    "    \n",
+    "    # next() returns the first item from the generator, or None if the generator is empty\n",
+    "    return next(match_indices, None)\n",
+    "\n",
+    "def find_files_with_text(file_paths: List[str], search_string: str) -> Optional[str]:\n",
+    "    \"\"\"\n",
+    "    Searches for a string within a list of PDF files.\n",
+    "\n",
+    "    Args:\n",
+    "        file_paths (List[str]): A list of PDF file paths.\n",
+    "        search_string (str): The string to search for.\n",
+    "\n",
+    "    Returns:\n",
+    "        List[str]: A list of file paths that contain the search string.\n",
+    "    \"\"\"\n",
+    "    found_files = []\n",
+    "    for file_path in file_paths:\n",
+    "        try:\n",
+    "            with pdfplumber.open(file_path) as pdf:\n",
+    "                # Extract text from all pages\n",
+    "                first_page = pdf.pages[0].extract_text()\n",
+    "                \n",
+    "                # Check if the search string is in the extracted text\n",
+    "                lines = first_page.split('\\n')\n",
+    "                l = (lines[0])\n",
+    "                # Find the index of the \"Sold to:\" line\n",
+    "\n",
+    "                if ('ADD='+search_string) in l:\n",
+    "                    return file_path\n",
+    "        \n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Error: File not found at {file_path}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred while processing {file_path}: {e}\")\n",
+    "            \n",
+    "    return None\n",
     "\n",
     "def find_latest_file(folder_path: str) -> Path | None:\n",
     "    \"\"\"\n",
@@ -261,7 +302,34 @@
     "    except pyperclip.PyperclipException:\n",
     "        print(\"Could not copy to clipboard. Please check your pyperclip installation.\")\n",
     "\n",
-    "    return message"
+    "    return message\n",
+    "\n",
+    "def generate_html_email_message(order_number: str, mrn_number: str):\n",
+    "    \"\"\"\n",
+    "    Generates a standardized HTML email message, copies it to the clipboard,\n",
+    "    and returns the message string.\n",
+    "    \"\"\"\n",
+    "    # Use HTML tags to format the message.\n",
+    "    # <b> tags are used for bolding, and <br> for line breaks.\n",
+    "    message_html = f\"\"\"\n",
+    "Hello,<br><br>\n",
+    "\n",
+    "Your Ref <b>{order_number}</b>.<br><br>\n",
+    "\n",
+    "Please kindly find attached import entry docs.<br><br>\n",
+    "\n",
+    "<b>{mrn_number}</b>.<br><br>\n",
+    "\n",
+    "Thank you.\n",
+    "\"\"\"\n",
+    "\n",
+    "    try:\n",
+    "        pyperclip.copy(message_html)\n",
+    "        # print(\"HTML message successfully copied to clipboard. You can now paste it into Outlook.\")\n",
+    "    except pyperclip.PyperclipException:\n",
+    "        print(\"Could not copy to clipboard. Please check your pyperclip installation.\")\n",
+    "\n",
+    "    return message_html"
    ]
   },
   {
@@ -277,58 +345,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 94,
    "id": "b218665e-1e56-4704-b987-4543cd248745",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Invoice Number': '25809840 - RI',\n",
-       " 'Order Number': 'WEPA25818067',\n",
+       "{'Invoice Number': '25809922 - RI',\n",
+       " 'Order Number': 'WEPA25818241',\n",
        " 'Total Net Mass': 7669.0,\n",
        " 'Total Gross Mass': 9777.0,\n",
        " 'Total Packages': 66.0,\n",
        " 'Total Invoice': 12249.6}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "folder_path = r\"/Users/zhengzhu/code/sf-express/Data/\"\n",
+    "search_term = \"ALDI\"\n",
     "# we extract the latest pdf file from the folder_path which not start with CDS\n",
-    "f = find_latest_file(folder_path)\n",
+    "# f = find_latest_file(folder_path)\n",
+    "\n",
+    "folder_path = Path(folder_path)\n",
+    "pdf_files = [p for p in folder_path.glob('*.pdf') if not p.name.lower().startswith('cds')]\n",
+    "# print(pdf_files)\n",
+    "f = find_files_with_text(pdf_files, search_term)\n",
     "# We extract the invoice information from the latest pdf file\n",
-    "invoice_data = extract_invoice_data('SI 25818067 - Customer Invoice Aldi UK.pdf')\n",
+    "invoice_data = extract_invoice_data(f)\n",
     "invoice_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "id": "985e647f-2e21-45aa-b49a-0ea9cf9785d0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Message successfully copied to clipboard. You can now paste it.\n",
-      "\n",
-      "Hello,\n",
-      "\n",
-      "Your Ref 25818067.\n",
-      "\n",
-      "Please kindly find attached import entry docs.\n",
-      "\n",
-      "MRN:25GB 9IBF 2TOR TUNA R2.\n",
-      "\n",
-      "Thank you.\n",
-      "\n"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "Hello,<br><br>\n",
+       "\n",
+       "Your Ref <b>25818067</b>.<br><br>\n",
+       "\n",
+       "Please kindly find attached import entry docs.<br><br>\n",
+       "\n",
+       "<b>MRN:25GB 9IBF 2TOR TUNA R2</b>.<br><br>\n",
+       "\n",
+       "Thank you.\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -337,38 +414,28 @@
     "pdf_file = find_latest_mrn_file(folder_path)\n",
     "mrn_number = extract_mrn_from_pdf(pdf_file)\n",
     "# We generate the message to reply the email\n",
-    "msg = generate_and_copy_email_message(extract_first_number(invoice_data['Order Number']), mrn_number)\n",
-    "print(msg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "c63817ea-5c75-49d2-ae46-110671208202",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'25603449'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "extract_first_number(\"SX - 25603449 / OX - 22385458\")"
+    "msg = generate_html_email_message(extract_first_number(invoice_data['Order Number']), mrn_number)\n",
+    "display(HTML(msg))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "319e0183-834d-4287-8a9b-d6d0222af8ea",
+   "id": "85c8b8d8-429c-4fba-8f9f-0cfdad0a7053",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "Hello,<br><br>\n",
+    "\n",
+    "Your Ref <b>25818067</b>.<br><br>\n",
+    "\n",
+    "Please kindly find attached import entry docs.<br><br>\n",
+    "\n",
+    "<b>MRN:25GB 9IBF 2TOR TUNA R2</b>.<br><br>\n",
+    "\n",
+    "Thank you.\n"
+   ]
   }
  ],
  "metadata": {
